--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <header>
     <nav>
       <ul>
-        <li class="nav-li"><i class="fa fa-home"></i><a href="#" class="nav-link">home</a></li>
-        <li class="nav-li"><i class="fa fa-laptop"></i><a href="#projects" class="nav-link">projects</a></li>
-        <li class="nav-li"><i class="fa fa-female"></i><a href="#about" class="nav-link">about</a></li>
-        <li class="nav-li"><i class="fa fa-envelope-o"></i><a href="#contact" class="nav-link">contact</a></li>
+        <li class="nav-li"><i class="fa fa-home"></i><a href="" class="nav-link home-link">home</a></li>
+        <li class="nav-li"><i class="fa fa-laptop"></i><a href="" class="nav-link projects-link">projects</a></li>
+        <li class="nav-li"><i class="fa fa-info"></i><a href="" class="nav-link about-link">about</a></li>
+        <li class="nav-li"><i class="fa fa-envelope-o"></i><a href="" class="nav-link contact-link">contact</a></li>
       </ul>
     </nav>
   </header>
