--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav>
       <ul>
-        <li class="nav-li"><i class="fa fa-home nav-icon"></i><a href="#" class="nav-link home-link">home</a></li>
+        <li class="nav-li"><i class="fa fa-home nav-icon"></i><a href="#/" class="nav-link home-link">home</a></li>
         <li class="nav-li"><i class="fa fa-laptop nav-icon"></i><a href="#/projects" class="nav-link projects-link">projects</a></li>
         <li class="nav-li"><i class="fa fa-info nav-icon"></i><a href="#/about" class="nav-link about-link">about</a></li>
         <li class="nav-li"><i class="fa fa-envelope-o nav-icon"></i><a href="#/contact" class="nav-link contact-link">contact</a></li>
@@ -29,52 +29,55 @@
   <div class="content-container">
     <div class="section" id="home">
       <h1 class="name">Amy Simmons</h1>
+      <div class="name-container">
+
+      </div>
     </div>
     <div class="section" id="projects">
       <h2>Projects</h2>
       <div class="project">
         <h3>Playa</h3>
-        <p class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="left">
-          <img class="project-image" src="project-images/playa.png" alt="Playa">
-          <a href="" class="project-link">Site</a>    
-        </div>
-        <div class="right">
-          <div id="playa-visualisation"></div>
-          <a href="" class="project-link">Code</a>
-        </div>
+        <p class="project-desc">My final project for Web Development Immersive. Playa brings democracy to music playlists, allowing guests to add an equal number of songs and vote to skip.</p>
+        <div class="technologies">Ruby on Rails | JavaScript | jQuery | Backbone.js | Underscore.js | Ajax| HTML | CSS </div>
+        <img class="project-image" src="project-images/playa.png" alt="Playa">
+        <a href="" class="project-link">View site</a>    
+        <div id="playa-visualisation"></div>
+        <a href="" class="project-link">View code</a>
       </div>
       <div class="project">
-        <h3>Sparkr</h3>
-        <p class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="left">
-            <img class="project-image" src="project-images/sparkr.png" alt="Sparkr">
-            <a href="" class="project-link">Site</a>  
-        </div>
-        <div class="right">
-          <div id="sparkr-visualisation"></div>
-          <a href="" class="project-link">Code</a>
-        </div>
+        <h3>Sparkr </h3>
+        <p class="project-desc">My second project for Web Development Immersive. Sparkr is a dating app for mature-aged singles, where connections are formed through moments.</p>
+        <div class="technologies">Ruby on Rails | JavaScript | jQuery | Ajax | Handlebars.js| HTML | CSS </div>
+        <img class="project-image" src="project-images/sparkr.png" alt="Sparkr">
+        <a href="" class="project-link">View site</a>  
+        <div id="sparkr-visualisation"></div>
+        <a href="" class="project-link">View code</a>
       </div>
       <div class="project">
-        <h3>Twitter</h3>
+        <h3>Twitter </h3>
+        <div class="technologies">Ruby on Rails | JavaScript | jQuery | HTML | CSS </div>
         <img class="project-image" src="project-images/twitter.png" alt="Twitter">
-        <p class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <a href="" class="project-link">Site</a>
+        <p class="project-desc">My first project for Web Development Immersive. I built a version of Twitter which allows users to quickly and easily separate accredited News tweets from the noise.</p>
+        <a href="" class="project-link">View site</a>
         <div id="twitter-visualisation"></div>
-        <a href="" class="project-link">Code</a>
+        <a href="" class="project-link">View code</a>
       </div>
       <div class="project">
         <h3>Faith in Numbers</h3>
-        <p class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="technologies">JavaScript | jQuery | D3js | HTML | CSS</div>
+        <p class="project-desc">I built this website in March 2014 as my final project in General Assembly’s Front-End Web Development course. It was my first time using d3js.</p>
         <img class="project-image" src="project-images/faith-in-numbers.png" alt="Faith in Numbers">
-        <a href="" class="project-link">Site</a>
+        <a href="" class="project-link">View site</a>
         <div id="fin-visualisation"></div>
-        <a href="" class="project-link">Code</a>
+        <a href="" class="project-link">View code</a>
       </div>
     </div>
     <div class="section" id="about">
       <h2>About</h2>
+      <p>I spent the first three months of 2015 transitioning from a journalist/digital producer who could barely write a line of code, into a full-stack web developer who can build apps from scratch using a variety of programming languages and libraries.</p>
+      <p>I graduated from General Assembly’s Web Development Immersive course in April. During the course I worked the hardest I’ve ever worked, and I loved every minute of it.</p>
+      <p>I can’t wait to find an amazing workplace where I can put my skills and passions to use, continue learning to code and become the best developer I can be.</p>
+      <a class="resume-download-link" href="/files/Amy-Simmons-Resume-April-2015.pdf" download>Download my resume</a>
     </div>
     <div class="section" id="contact">
       <h2>Contact</h2>
