still styling, deleted some files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Amy Simmons</title>
   <link rel="stylesheet" href="css/portfolio.css">
-  <!-- <link rel="stylesheet" type="text/html" href="fonts/perfograma"> -->
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.css">
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -73,9 +72,12 @@
     </div>
     <div class="section" id="about">
       <h2>About</h2>
-      <p>I spent the first three months of 2015 transitioning from a journalist/digital producer who could barely write a line of code, into a full-stack web developer who can build apps from scratch using a variety of programming languages and libraries.</p>
-      <p>I graduated from General Assembly’s Web Development Immersive course in April. During the course I worked the hardest I’ve ever worked, and I loved every minute of it.</p>
-      <p>I can’t wait to find an amazing workplace where I can put my skills and passions to use, continue learning to code and become the best developer I can be.</p>
+      <img class="profile" src="images/profile-pic.jpg" alt="Amy Simmons">
+      <div class="about-content">
+        <p>I spent the first three months of 2015 transitioning from a journalist/digital producer who could barely write a line of code, into a full-stack web developer who can build apps from scratch using a variety of programming languages and libraries.</p>
+        <p>I graduated from General Assembly’s Web Development Immersive course in April. During the course I worked the hardest I’ve ever worked, and I loved every minute of it.</p>
+        <p>I can’t wait to find an amazing workplace where I can put my skills and passions to use, continue learning to code and become the best developer I can be.</p>
+      </div>
       <a class="resume-download-link" href="/files/Amy-Simmons-Resume-April-2015.pdf" download>Download my resume</a>
     </div>
     <div class="section" id="contact">
@@ -89,10 +91,9 @@
     </div>
     <div class="section" id="just-for-fun">
       <h2>Just for fun</h2>
-      <h3>Code flowers</h3>
-      <p>Each disc represents a file, with a radius proportional to the number of lines of code. Source: Via <a href="http://www.redotheweb.com/CodeFlower/">François Zaninotto</a>, built with D3js.</p>
       <div class="code-flower-container">
-
+        <h3>Code flowers</h3>
+        <p>Each disc represents a file, with a radius proportional to the number of lines of code. Source: Via <a href="http://www.redotheweb.com/CodeFlower/">François Zaninotto</a>, built with D3js.</p>
         <div class="code-flower">
           <h4>Playa</h4>
           <div id="playa-visualisation"></div>  
