--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/portfolio.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.css">
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="js/CodeFlower.js" charset="utf-8"></script>
   <script src="js/dataConverter.js"></script>
   <script src="js/underscore.js"></script>
@@ -22,8 +22,8 @@
         <li class="nav-li"><i class="fa fa-home nav-icon"></i><a href="#/" class="nav-link home-link">home</a></li>
         <li class="nav-li"><i class="fa fa-laptop nav-icon"></i><a href="#/projects" class="nav-link projects-link">projects</a></li>
         <li class="nav-li"><i class="fa fa-info nav-icon"></i><a href="#/about" class="nav-link about-link">about</a></li>
-        <li class="nav-li"><i class="fa fa-envelope-o nav-icon"></i><a href="#/contact" class="nav-link contact-link">contact</a></li>
-        <li class="nav-li"><i class="fa fa-code nav-icon"></i><a href="#/just-for-fun" class="nav-link contact-link">Just for fun</a></li>
+        <li class="nav-li"><i class="fa fa-envelope nav-icon"></i><a href="#/contact" class="nav-link contact-link">contact</a></li>
+        <li class="nav-li"><i class="fa fa-code nav-icon"></i><a href="#/just-for-fun" class="nav-link contact-link">just for fun</a></li>
       </ul>
     </nav>
   </header>
