--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/portfolio.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.css">
-  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="js/d3.js" charset="utf-8"></script>
   <script src="js/CodeFlower.js" charset="utf-8"></script>
   <script src="js/dataConverter.js"></script>
   <script src="js/underscore.js"></script>
