responsive nav working

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Amy Simmons</title>
-  <link rel="stylesheet" href="css/portfolio.css">
+  
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="css/portfolio.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="js/d3.js" charset="utf-8"></script>
   <script src="js/CodeFlower.js" charset="utf-8"></script>
@@ -19,6 +20,7 @@
 <body>
   <header>
     <nav>
+      <i class="fa fa-bars hamburger"></i>
       <ul>
         <li class="nav-li"><i class="fa fa-home nav-icon"></i><a href="#/" class="nav-link home-link">home</a></li>
         <li class="nav-li"><i class="fa fa-laptop nav-icon"></i><a href="#/projects" class="nav-link projects-link">projects</a></li>
