resume updated with thoughtworks

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2>About</h2>
       <img class="profile" src="images/profile-pic.jpg" alt="Amy Simmons">
       <div class="about-content">
-        <p>I spent the first three months of 2015 transitioning from a journalist/digital producer who could barely write a line of code, into a full-stack web developer who can build apps from scratch using a variety of programming languages and libraries.</p>
+        <p>I spent the first three months of 2015 transitioning from a journalist/digital producer into a full-stack web developer who can build apps from scratch using a variety of programming languages and libraries.</p>
         <p>I graduated from General Assembly’s Web Development Immersive course in April. During the course I worked the hardest I’ve ever worked, and I loved every minute of it.</p>
         <p>I can’t wait to find an amazing workplace where I can put my skills and passions to use, continue learning to code and become the best developer I can be.</p>
       </div>
